unpackaged/objects/Agent_Work_Time__c.object
<CustomObject>
    <fields>
        <fullName>During_Case_Status__c</fullName>
        <label>During Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Ping__c</fullName>
        <label>Last Ping</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Count__c</fullName>
        <label>Session Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Time__c</fullName>
        <label>Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_in_Seconds__c</fullName>
        <label>Time in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Work_Time__c</fullName>
        <label>Work Time</label>
        <referenceTo>Work_Time__c</referenceTo>
        <relationshipLabel>Agent Work Times</relationshipLabel>
        <relationshipName>Agent_Work_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Agent Work Time</label>
    <nameField>
        <displayFormat>AWN-{000000000}</displayFormat>
        <label>Agent Work Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Work Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>